--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/Snowcloak.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/Snowcloak.json
@@ -11,7 +11,7 @@
         {
             "Name": "Wandil",
             "Strategy": "Everyone - Try not to spread out too much. Especially when *Tundra is in effect. Tundra+Cold Wave makes the arena really tight, so you want to try and drop the bombs in a close proximity to each other to give you space to move about.\nWhen *Snowdrift is being cast start moving and don't stop until you see the visual effect, otherwise you will get a stack of *Frozen\n\nTank - Bring the boss close to the wall, but not on the wall (prep for *Tundra) & make sure the boss is facing away from the party so you don't cleave them.\n\nHealer - Keep an eye on the parties *Frozen stacks. If they get 4, they will be stunned for ~10s. Be prepared to heal them. Also be careful about your own stacks as you may be stood still healing whilst *Snowdrift is rolling in. Also, give the DPS a hand with the *Frost bombs when you get a chance.\n\nDPS - Make sure when the *Frost bombs spawn you put them down ASAP",
-            "KeyMechanics": [
+            "Mechanics": [
                 {
                     "Name": "Ice Guillotine",
                     "Description": "Frontal cleave - Moderate damage.",
@@ -47,7 +47,7 @@
         {
             "Name": "Yeti",
             "Strategy": "Everyone - The boss has high defence so you have to utilize the *Snowball mechanic whilst DPS'ing. Work together to align *Spriggan Ice Cutters + *Frozen Mist attack to make snowballs. Subsequent hits by this attack will make the snowball larger, dealing more damage when it hits the boss. *DO NOT kill *Spriggan Ice Cutters.\n\nTank - You will juggling the boss position throughout the fight. When *Frozen Mist is being cast try and make it hit a *Spriggan. When *Buffet is being cast make sure it *DOES NOT hit a snowball.\n\nHealer - Keep everyone topped up. If the boss is casting *Northerlies and DPS are busy, hit a snowball at the boss. (Face the boss whilst hitting the snowball)\n\nDPS - As soon as the *Frostbound adds spawn, put them down. If the boss is casting *Northerlies, hit a snowball at the boss. (Face the boss whilst hitting the snowball) ",
-            "KeyMechanics": [
+            "Mechanics": [
                 {
                     "Name": "Buffet",
                     "Description": "Frontal AOE cone - Moderate damage - If a *Snowball is hit with this it will destroy it (bad).",
@@ -73,7 +73,7 @@
         {
             "Name": "Fenrir",
             "Strategy": "Everyone - When the *Ice Shards appear, pay attention. 2 of them will target random players with a line AOE. The final shard has a delayed circle AOE. Every other *Ice Shard phase the boss will cast *Lunar Cry. Hide behind the pillar which did NOT have a line AOE to dodge this, once the boss has finished that attack, run away as the shard will explode soon after.\n\nTank - Make sure to keep the boss facing away from the party, so you don't accidentally cleave them.\n\nHealer - Try and keep everyone topped up as most mechanics do a large amount of damage. Also, try and hold onto *Swiftcast so you can rez players fast as *Lunar Cry will kill anybody hit by it.\n\nDPS - Do damage & do the mechanics correctly. Less healing from the healer means a faster clear.",
-            "KeyMechanics": [
+            "Mechanics": [
                 {
                     "Name": "Ecliptic Bite",
                     "Description": "Frontal cleave - Moderate damage. Used after *Lunar Cry. Damage is scaled by how many players are hit by the exploding shard.",
