--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Trials/TheChrysalis.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Trials/TheChrysalis.json
@@ -11,7 +11,7 @@
         {
             "Name": "Nabriales (Phase 1)",
             "Strategy": "At 80%% HP Nabriales will go invulnerable and spawn orbs that move towards him, each orb gives a debuff and players must alternate between purple and grey orbs to avoid taking massive amounts damage, while orbs are moving small adds will spawn and preform large cone AOEs, After all the orbs are gone Nabriales will preform a raidwide with damage increasing per orb that reached him. \n\nAt 40%% Nabriales will repeat the orbs mechanic. \n\nAt 20%% Nabriales 2nd phase will start.",
-            "KeyMechanics": [
+            "Mechanics": [
                 {
                     "Name": "Spark",
                     "Description": "A high damage attack aimed at the main tank. Will be used twice after the boss casts double or three times after a triple cast",
