--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Trials/TheNavel.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Trials/TheNavel.json
@@ -11,7 +11,7 @@
         {
             "Name": "Titan",
             "Strategy": "Titan will periodically cause raidwide damage throughout the fight. \n\nAt 75%% HP Titan will jump and spawn a red ring on the outside of the arena players must stand just outside the ring to avoid taking heavy damage and falling off the platform. After this Titan will start casting Landslide. \n\nAt 50%% HP Titan will do his jump move once more, After he comes back down he will go invulnerable and the players will need to attack his heart. \n\nAfter this titan will start to cast Weight of the land and Granite Goal until he dies.",
-            "KeyMechanics": [
+            "Mechanics": [
                 {
                     "Name": "Landslide",
                     "Description": "A line AOE that will knock anyone caught in it backwards off the arena.",
