--- a/src/Resources/Localization/Duty/en/Endwalker/Trials/TheFinalDay.json
+++ b/src/Resources/Localization/Duty/en/Endwalker/Trials/TheFinalDay.json
@@ -10,7 +10,7 @@
 		{
 			"Name": "The Endsinger (Phase 1)",
 			"Strategy": "Players must pay attention to the animations of the boss, as these indicate which areas of the arena are hit by mechanics. \nAlso, players must pay attention to the summoned planets that move around the edge of the arena, as they result in massive AoEs when they crash into each other. Furthermore the boss frequently rewinds time to reconstruct planets and let them crash again.",
-			"KeyMechanics": [
+			"Mechanics": [
 				{
 					"Name": "Elegeia",
 					"Description": "Raidwide, followed by two planets spawning around the arena.\nThese will start orbiting the platform until the faster one crashes into the slower one, resulting in a massive circle AoE.",
@@ -76,7 +76,7 @@
 		{
 			"Name": "Kakodaimon",
 			"Strategy": "This phase is a DPS check. Feel free to use melee Limit Break, as the Limit Gauge will fully charges when the add dies. \nThe add must die before the Despair gauge reaches 100.",
-			"KeyMechanics": [
+			"Mechanics": [
 				{
 					"Name": "Meteor Radiant",
 					"Description": "Spawns planets on the edge of the platform that will crash in large circle AoEs onto the platform.",
@@ -92,7 +92,7 @@
 		{
 			"Name": "The Endsinger (Phase 2)",
 			"Strategy": "This phase is just a cinematic finishing struggle sequence. Mechanics are a light healing check and a couple AoEs to avoid.",
-			"KeyMechanics": [
+			"Mechanics": [
 				{
 					"Name": "Telos",
 					"Description": "Raidwide AoE.",
