--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/AmdaporKeep.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/AmdaporKeep.json
@@ -49,7 +49,7 @@
                     "Title": "Phase 1",
                     "Strategy": "The Demon Wall will always follow a pattern, it will always use Liquefy four times before using repel. \n\nAfter two uses of Repel the demon wall will summon two Adds called Bloodlapper that can inflict the Paralysis debuff, make sure to kill them as soon as they spawn.",
                     "StrategyShort": "FILL LATER",
-                    "KeyMechanics": [
+                    "Mechanics": [
                         {
                             "Name": "Muder Hole",
                             "Description": "Targeted attack that deals a small amount of damage",
@@ -77,7 +77,7 @@
                     "Title": "Phase 1",
                     "Strategy": "Throughout the fight Anantaboga will use Imminent Catastrophe to spawn red orbs that deal damage to anyone in line of sight, to avoid this players must hide behind on of 4 statues around the arena. Additionally, the cast will awake one of the statues turning it into an add, players must kill the add and avoid its AOEs",
                     "StrategyShort": "FILL LATER",
-                    "KeyMechanics": [
+                    "Mechanics": [
                         {
                             "Name": "Tail Drive",
                             "Description": "Rear cone AOE that will deal high damage and inflict the Concussion debuff causing damage over time to anyone hit",
