--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/CopperbellMines.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/CopperbellMines.json
@@ -16,7 +16,7 @@
                     "Title": "Phase 1",
                     "Strategy": "Every so often Kottos will jump to 3 areas with a massive circle AoE, move to a safe spot to avoid this.",
                     "StrategyShort": "FILL LATER",
-                    "KeyMechanics": [
+                    "Mechanics": [
                         {
                             "Name": "Grand Slam",
                             "Description": "Deals a large amount of damage to the main target.",
@@ -49,7 +49,7 @@
                     "Title": "Phase 1",
                     "Strategy": "Will occasionally split off into multiple Ichorous Drips below 50%% HP, which will each explode after a short time.",
                     "StrategyShort": "FILL LATER",
-                    "KeyMechanics": [
+                    "Mechanics": [
                         {
                             "Name": "Fluid Spread",
                             "Description": "Deals a large amount of damage to the main target.",
@@ -77,7 +77,7 @@
                     "Title": "Phase 1",
                     "Strategy": "Will occasionally split off into multiple Ichorous Drips below 50%% HP, which will each explode after a short time.",
                     "StrategyShort": "FILL LATER",
-                    "KeyMechanics": [
+                    "Mechanics": [
                         {
                             "Name": "Grand Slam",
                             "Description": "Deals a large amount of damage to the main target.",
