--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/HaukkeManor.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/HaukkeManor.json
@@ -11,8 +11,8 @@
         {
             "Name": "Manor Claviger",
             "Strategy": "Manor Claviger has an untelevised melee cleave attack. The attack can do massive physical damage to lightly armored party members. Make sure the tank faces her away from the rest of the party. When defeated, the doors leading to the Foyer will open, and Claviger will drop a Green Key. Do not go forward to the Foyer. Instead, proceed back out of the entrance of the boss room and use the Green Key to unlock the Ivy Door.",
-            "TLDR": "Face away from party due to cleave attacks. When the boss is defeated, exit the boss room the way you came in and open the door to the basement.",
-            "KeyMechanics": [
+            "StrategyShort": "Face away from party due to cleave attacks. When the boss is defeated, exit the boss room the way you came in and open the door to the basement.",
+            "Mechanics": [
                 {
                     "Name": "Sweet Steel",
                     "Description": "Untelivised cone AoE melee attack",
@@ -33,8 +33,8 @@
         {
             "Name": "Manor Jester and Manor Steward",
             "Strategy": "Manor Jester and Manor Steward are two bosses located in the same room. Jester is the spell caster and Steward is the tank. Players should kill Jester first because it deals more damage and has less HP. When defeated, Steward will drop a slip of Bloody Parchment, use this to unlock the Sealed Barrier on the stairs at the start of the Dungeon.",
-            "TLDR": "Kill Jester first. Then, use the Bloody Parchment to unlock the Sealed Barrier on the stairs by the entrance to the dungeon.",
-            "KeyMechanics": [
+            "StrategyShort": "Kill Jester first. Then, use the Bloody Parchment to unlock the Sealed Barrier on the stairs by the entrance to the dungeon.",
+            "Mechanics": [
                 {
                     "Name": "Ice Spikes (Jester)",
                     "Description": "Uninterruptable casted spell",
@@ -50,8 +50,8 @@
         {
             "Name": "Lady Amandine",
             "Strategy": "In the boss room, there are 4 Void Lamps. During the fight, the Void Lamps will periodically light up, doing AoE damage to the entire party. Players should turn off the lamps as soon as possible. Lady Amandine will cast Void Fire and Void Thunder. Avoid her spellcast if possible by interrupting or stunning her.\n\nAt approximately 50%% health, she will summon Lady's Candles which are bombs that will self-destruct if not destroyed quickly.\n\nAt approximately 25%% health, Lady Amandine will summon a Manor Sentry and Lady's Handmaidens. It is possible in certain circumstances to DPS down the boss if the party acts quickly enough. Otherwise, kill these adds before finishing off the boss.",
-            "TLDR": "Turn off Void Lamps as soon as possible. Avoid Void Fire and Void Thunder. If Lady Amandine summons Manor Sentry and Handmaidens, kill them before killing the boss.",
-            "KeyMechanics": [
+            "StrategyShort": "Turn off Void Lamps as soon as possible. Avoid Void Fire and Void Thunder. If Lady Amandine summons Manor Sentry and Handmaidens, kill them before killing the boss.",
+            "Mechanics": [
                 {
                     "Name": "Void Fire III",
                     "Description": "Uninterruptable spell",
