--- a/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheSunkenTempleofQarn.json
+++ b/src/Resources/Localization/Duty/en/A Realm Reborn/Dungeons/TheSunkenTempleofQarn.json
@@ -11,8 +11,8 @@
         {
             "Name": "Teratotaur",
             "Strategy": "Teratotaur will occasionally summon Dung Wespes, which should be killed before they cast Final Sting, which will deal 90%% of a targets maxmium health. When Teratotaur is under 50%% HP, he will periodically \"begin to growl\", and then use Mortal Ray. This room-wide AoE ability places the Doom debuff on your party. The debuff lasts 12 seconds and will instantly kill anyone still afflicted by it when the timer ends. Players can remove this debuff by stepping on the square plate that is glowing orange.",
-            "TLDR": "Focus killing Dung Wespes before they cast final sting. Stand on the glowing orange plate when afflicted with the Doom debuff.",
-            "KeyMechanics": [
+            "StrategyShort": "Focus killing Dung Wespes before they cast final sting. Stand on the glowing orange plate when afflicted with the Doom debuff.",
+            "Mechanics": [
                 {
                     "Name": "Mortal Ray",
                     "Description": "Raid-wide that inflicts the Doom debuff.",
@@ -38,8 +38,8 @@
         {
             "Name": "Temple Guardian",
             "Strategy": "Throughout the fight, Temple Guardian will spawn Golem Soulstone onto its chest. While the Soulstone is alive, Temple Guardian takes virtually no damage. When the Golem Soulstone is destroyed, the golem is stunned and becomes vulnerable for a period of time before the Soulstone respawns. Players should switch their target to the Soulstone when it spawns. The Guardian will target random players with most of his abilities.",
-            "TLDR": "Switch your target to the Golem Soulstone when it spawns, otherwise you will deal very little damage to the Guardian.",
-            "KeyMechanics": [
+            "StrategyShort": "Switch your target to the Golem Soulstone when it spawns, otherwise you will deal very little damage to the Guardian.",
+            "Mechanics": [
                 {
                     "Name": "Rockslide",
                     "Description": "Frontal column AoE attack that deals massive damage.",
@@ -70,8 +70,8 @@
         {
             "Name": "Adjudicator",
             "Strategy": "Throughout the fight, he will spawn various Mythril Verges on the ground.\n\nMythril Verge:\nWhen the Mythril Verge spawns, it will start firing beams of laser across the room. When a pale, blue beam appears across the ground, move out of its way immediately. The beam will light up after about 1 second and heavily damage anyone in its path. Because of the high damage and low health nature of the Mythril Verge, damage dealers should destroy them as soon as they spawn.\n\nAfter the Adjudicator has taken some damage, he will spawn Verge in a large dark box on the ground. After a few seconds the black box will seal off and the Verge will begin to cast Verge Pulse. Verge Pulse explodes the Verge and does a decent amount of damage to your entire party. While the black box is visible, players who are not in it will do reduced damage. Damage Dealers should enter the black box as soon as it spawns and destroy the verge.\n\nAfter taking a significant amount of damage, the Adjudicator will spawn 2 black boxes in the 2 corners of the room. The two damage dealers should split up and enter the two boxes and destroy the verges before they can cast Verge Pulse.\n\nWhen near death, Adjudicator will summon 4 laser-shooting Mythril Verge at a time. Players should dodge the lasers while taking out as many Verges as they can. DPSing down the boss is also an option.\n\nSun Juror:\nIn the beginning of the fight, the Adjudicator will spawn cube-shaped mobs named Sun Jurors. When fighting these creatures, players need to ensure that the mobs die on the square platforms on the ground. If you do not kill them on the platforms, they will continuously revive. No more Sun Jurors will spawn once the Mythril Verges start spawning.",
-            "TLDR": "DPS should kill Mythril Verge' when they spawn. DPS should enter the black box when it spawns. Kill Sun Jurors on the platforms.",
-            "KeyMechanics": [
+            "StrategyShort": "DPS should kill Mythril Verge' when they spawn. DPS should enter the black box when it spawns. Kill Sun Jurors on the platforms.",
+            "Mechanics": [
                 {
                     "Name": "Darkness",
                     "Description": "Frontal AoE cone attack that will damage and blind the players struck.",
