--- a/src/Resources/Localization/Duty/en/Endwalker/Dungeons/Vanaspati.json
+++ b/src/Resources/Localization/Duty/en/Endwalker/Dungeons/Vanaspati.json
@@ -11,7 +11,7 @@
 		{
 			"Name": "Terminus Snatcher",
 			"Strategy": "Stay away from mouths that are open watch the boss's animations to predict mechanics. Also has a spinning hand cursor mechanic that obstructs your movement.",
-			"KeyMechanics": [
+			"Mechanics": [
 				{
 					"Name": "Last Gasp",
 					"Description": "Tankbuster.",
@@ -47,7 +47,7 @@
 		{
 			"Name": "Terminus Wrecker",
 			"Strategy": "The boss surrounds the arena with a damaging ring of fire. Try to not get knocked into it, and run into water orbs when he casts Aether Spray - Fire.",
-			"KeyMechanics": [
+			"Mechanics": [
 				{
 					"Name": "Total Wreck",
 					"Description": "Tankbuster.",
@@ -88,7 +88,7 @@
 		{
 			"Name": "Svarbhanu",
 			"Strategy": "When the boss casts Aetherial Disruption a large, coloured icon covering the whole screen will show which AoEs go off. When the boss flies to the edge of the arena to launch meteors at it there are set safe zones, as the boss always targets the same lines with his meteors. From left to right, on the first set line 2 is safe, on the second set it's line 3 and on the third set it's line 1.",
-			"KeyMechanics": [
+			"Mechanics": [
 				{
 					"Name": "Gnashing of Teeth",
 					"Description": "Tankbuster",
