--- a/src/Resources/Localization/Duty/en/Endwalker/Trials/TheDarkInside.json
+++ b/src/Resources/Localization/Duty/en/Endwalker/Trials/TheDarkInside.json
@@ -10,7 +10,7 @@
 		{
 			"Name": "Zodiark (Phase 1)",
 			"Strategy": "Watch out for the shape of the runes the boss summons at the edges of the arena. Triangle shape is a cone shaped AoE across the room. Square shape is a half room AoE on the side of the rune. Summoned Behemoths cast a circle AoE around themselves, while snakes cast a line AoE in the direction they're facing.",
-			"KeyMechanics": [
+			"Mechanics": [
 				{
 					"Name": "Kokytos",
 					"Description": "Reduces the everyone's HP to 1",
@@ -56,7 +56,7 @@
 		{
 			"Name": "Zodiark (Phase 2)",
 			"Strategy": "After the transition the boss starts rotating the arena below the players. Players must anticipate where AoEs are relocated to. During Astral Eclipse the boss will mark constellations outside of the arena which indicate what sections of the platform will be hit by meteors. Players have to look outside to anticipate this.",
-			"KeyMechanics": [
+			"Mechanics": [
 				{
 					"Name": "Astral Flow",
 					"Description": "Used immediately after Paradeigma. \nBoss rotates the arena with the spawned adds, while players are held in place.",
