--- a/src/Resources/Localization/Duty/en/Endwalker/Trials/TheMothercrystal.json
+++ b/src/Resources/Localization/Duty/en/Endwalker/Trials/TheMothercrystal.json
@@ -11,7 +11,7 @@
 		{
 			"Name": "Hydaelyn (Phase 1)",
 			"Strategy": "Watch out for her Dawn Mantle. Red icon means stack inside her hitbox, green means stay away from her, blue means that she'll cast large line AoEs in a cross shape from her position.",
-			"KeyMechanics": [
+			"Mechanics": [
 				{
 					"Name": "Heroes's Radiance",
 					"Description": "Unavoidable raidwide damage.",
@@ -37,7 +37,7 @@
 		{
 			"Name": "Crystals of Light (Add Phase)",
 			"Strategy": "Destroy all of the crystals before Hydaelyn's Conviction bar reaches 100.",
-			"KeyMechanics": [
+			"Mechanics": [
 				{
 					"Name": "Hydaelyn's Ray",
 					"Description": "Proximity dive attack. Stand far away from the line.",
@@ -63,7 +63,7 @@
 		{
 			"Name": "Hydaelyn (Phase 2)",
 			"Strategy": "React to mechanics from phase 1, while she also casts Crystallize, which is either a party stack or circle AoEs around each player. Memorize in which order the Chakrams from Parhelion go out to avoid upcoming AoEs. Stand in the safe quadrant when she casts Lightwave. Stay with your party when she casts Echoes.",
-			"KeyMechanics": [
+			"Mechanics": [
 				{
 					"Name": "Heroes's Sundering",
 					"Description": "Cleave tankbuster.",
